...
                            }
                            DatabaseService().removePayments(
                                toBeRemoved, AppData().user.getGroupId());
                            Navigator.of(ctx).pop();
                          },
                          child: const Text(
                            'Remove',
                            style: TextStyle(
                              color: Colors.black,
                            ),
                          ),
                        ),
                        const SizedBox(
...

  FloatingActionButton _buildAddPaymentFloatingActionButton() {
    final TextEditingController titleController = TextEditingController();
    final TextEditingController amountController = TextEditingController();
    return FloatingActionButton.extended(
      label: const Text(
        'Add payment',
      ),
      icon: const Icon(
        Icons.add,
      ),
      onPressed: () {
        showModalBottomSheet(
...
                                    textCapitalization:
                                        TextCapitalization.sentences,
                                    controller: titleController,
                                    cursorColor: Colors.orangeAccent,
                                    decoration: const InputDecoration(
                                      label: Text(
                                        'Title',
                                        style: TextStyle(
                                          color: Colors.grey,
                                        ),
                                      ),
                                      focusedBorder: UnderlineInputBorder(
                                        borderSide: BorderSide(
...
                                            LengthLimitingTextInputFormatter(
                                                10),
                                          ],
                                          cursorColor: Colors.orangeAccent,
                                          decoration: const InputDecoration(
                                            label: Text(
                                              'Amount',
                                              style: TextStyle(
                                                color: Colors.grey,
                                              ),
                                            ),
                                            focusedBorder: UnderlineInputBorder(
                                              borderSide: BorderSide(
...
                                      ),
                                    ],
                                  ),
                                  const Divider(),
                                  Row(
                                    children: [
                                      const Text('Payed by'),
                                      const SizedBox(
                                        width: 10,
                                      ),
                                      DropdownButton<String>(
                                        dropdownColor: color,
                                        hint: Text(AppData().user.getName()),
...
                                  ),
                                  const Divider(),
                                  Row(
                                    mainAxisAlignment:
                                        MainAxisAlignment.spaceBetween,
                                    children: [
                                      const Text('To whom'),
                                      Row(
                                        children: [
                                          const Text('Select all'),
                                          Checkbox(
                                            activeColor: Colors.orangeAccent,
                                            checkColor: Colors.black,
                                            value: allChecked,
                                            onChanged: (isChecked) {
                                              setState(
...
