...
                child: Form(
                  key: _formKey, //track the state of the form and validates it
                  child: SingleChildScrollView(
                    child: Column(
                      children: <Widget>[
                        const Text(
                          'Sign in',
                          style: TextStyle(
                            color: Colors.black54,
                            fontSize: 42,
                            fontWeight: FontWeight.bold,
                          ),
                        ),
...
                        SizedBox(
                          width: width > height ? width / 2 : width,
                          child: TextFormField(
                            keyboardType: TextInputType.emailAddress,
                            cursorColor: Colors.orangeAccent,
                            decoration:
                                textInputDecoration.copyWith(hintText: 'Email'),
                            validator: (val) {
                              if (val == null || val.isEmpty) {
                                return 'Enter an email';
                              } else {
                                return null;
                              }
...
                        ),
                        SizedBox(
                          width: width > height ? width / 2 : width,
                          child: TextFormField(
                            cursorColor: Colors.orangeAccent,
                            decoration: textInputDecoration.copyWith(
                                hintText: 'Password'),
                            validator: (val) {
                              if (val == null || val.length < 6) {
                                return 'Enter a password of at least 6 characters';
                              } else {
                                return null;
                              }
...
