...
                Navigator.of(context).pop();
              },
              style: ElevatedButton.styleFrom(
                backgroundColor: Colors.orangeAccent,
              ),
              child: const Text(
                'Close',
                style: TextStyle(
                  color: Colors.black,
                ),
              ),
            ),
            SizedBox(
...
                                    onPressed: () {
                                      AuthService().signOut();
                                      Navigator.of(ctx).pop();
                                      Navigator.of(context).pushNamed('/');
                                    },
                                    child: const Text(
                                      'Yes',
                                      style: TextStyle(
                                        color: Colors.black,
                                      ),
                                    ),
                                  ),
                                  const SizedBox(
...
                        ),
                      );
                    },
                  );
                },
                child: const Text(
                  'Logout',
                  style: TextStyle(
                    color: Colors.black,
                  ),
                ),
              ),
              SizedBox(
...
